--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,25 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-torch = "^2.5.1"
+torch = {version = "2.5.1+cu121", source = "torch"}
 ipykernel = "^6.29.5"
 numpy = "^2.1.3"
-torchvision = "^0.20.1"
+torchvision = {version = "0.20.1+cu121", source = "torch"}
 matplotlib = "^3.9.3"
 opencv-python = "^4.10.0.84"
 helper = "^2.5.0"
 tqdm = "^4.67.1"
 
+
+[[tool.poetry.source]]
+name = "PyPI"
+priority = "primary"
+
+
+[[tool.poetry.source]]
+name = "torch"
+url = "https://download.pytorch.org/whl/cu121"
+priority = "supplemental"
 
 [build-system]
 requires = ["poetry-core"]
