--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Michał Zaręba <michal.zareba@softwaremill.pl>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -18,6 +19,7 @@ tqdm = "^4.67.1"
 pre-commit = "^4.0.1"
 pyqt6 = "^6.7.1"
 pillow = "^11.0.0"
+hydra-core = "^1.3.2"
 
 
 [[tool.poetry.source]]
