--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pre-commit = "^4.0.1"
 pyqt6 = "^6.7.1"
 pillow = "^11.0.0"
 hydra-core = "^1.3.2"
+lightning = "^2.5.0.post0"
 
 
 [[tool.poetry.source]]
