--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ opencv-python = "^4.10.0.84"
 helper = "^2.5.0"
 tqdm = "^4.67.1"
 pre-commit = "^4.0.1"
+scikit-learn = "^1.6.0"
 
 
 [[tool.poetry.source]]
