--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pyqt6 = "^6.7.1"
 pillow = "^11.0.0"
 hydra-core = "^1.3.2"
 lightning = "^2.5.0.post0"
+scikit-learn = "^1.6.0"
 
 
 [[tool.poetry.source]]
