--- a/src/conf/models/params/cnn/params.yaml
+++ b/src/conf/models/params/cnn/params.yaml
@@ -3,6 +3,15 @@ train:
   momentum: 0.9
   epochs: 10
 
+metrics:
+  - accuracy
+  - f1
+  - precision
+  - recall
+pool_indices:
+  - 0
+  - 2
+
 layers:
   conv1:
       _target_: torch.nn.Conv2d
@@ -11,9 +20,6 @@ layers:
       kernel_size: 3
       stride: 2
       padding_mode: replicate
-  pool1:
-      _target_: torch.nn.MaxPool2d
-      kernel_size: 2
   conv2:
       _target_: torch.nn.Conv2d
       in_channels: 32
@@ -21,9 +27,6 @@ layers:
       kernel_size: 3
       stride: 2
       padding_mode: replicate
-  pool2:
-      _target_: torch.nn.MaxPool2d
-      kernel_size: 2
   conv3:
       _target_: torch.nn.Conv2d
       in_channels: 64
@@ -31,31 +34,29 @@ layers:
       kernel_size: 3
       stride: 2
       padding_mode: replicate
-  pool3:
-      _target_: torch.nn.MaxPool2d
-      kernel_size: 2
   conv4:
       _target_: torch.nn.Conv2d
       in_channels: 128
       out_channels: 256
       kernel_size: 3
-      stride: 2
+      stride: 1
       padding_mode: replicate
-  pool4:
-      _target_: torch.nn.MaxPool2d
-      kernel_size: 2
   conv5:
       _target_: torch.nn.Conv2d
       in_channels: 256
       out_channels: 512
       kernel_size: 3
-      stride: 2
+      stride: 1
       padding_mode: replicate
   fc1:
       _target_: torch.nn.Linear
-      in_features: 1152
-      out_features: 32
+      in_features: 2048
+      out_features: 128
   fc2:
+      _target_: torch.nn.Linear
+      in_features: 128
+      out_features: 32
+  fc3:
       _target_: torch.nn.Linear
       in_features: 32
       out_features: 4
