--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pillow = "^11.0.0"
 hydra-core = "^1.3.2"
 lightning = "^2.5.0.post0"
 scikit-learn = "^1.6.0"
+mlflow = "^2.19.0"
 
 
 [[tool.poetry.source]]
