refactor:changed the mlflow method, typing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["Michał Zaręba <michal.zareba@softwaremill.pl>"]
 readme = "README.md"
-package-mode = false
+packages = [
+    { include = "src", from = "." }
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
