--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["Michał Zaręba <michal.zareba@softwaremill.pl>"]
 readme = "README.md"
-package-mode = false
+packages = [
+    { include = "src", from = "." }
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -17,12 +19,14 @@ opencv-python = "^4.10.0.84"
 helper = "^2.5.0"
 tqdm = "^4.67.1"
 pre-commit = "^4.0.1"
+
 pyqt6 = "^6.7.1"
 pillow = "^11.0.0"
 hydra-core = "^1.3.2"
 lightning = "^2.5.0.post0"
 scikit-learn = "^1.6.0"
 mlflow = "^2.19.0"
+
 
 
 [[tool.poetry.source]]
