--- a/src/conf/config.yaml
+++ b/src/conf/config.yaml
@@ -1,13 +1,10 @@
 data:
   train: 'model/data/leaves'
 
-training: 'torch'
+training: 'lightning'
 workers: 12
 defaults:
-  - models: cnn
+  - models: resnet
 
 hydra:
-  mode: MULTIRUN
-  sweeper:
-    params:
-      models: glob(*)
+  mode: RUN
