--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ packages = [
 python = "^3.10"
 torch = {version = "2.5.1+cu121", source = "torch"}
 ipykernel = "^6.29.5"
-numpy = "^2.1.3"
+numpy = "2.0"
 torchvision = {version = "0.20.1+cu121", source = "torch"}
 matplotlib = "^3.9.3"
 opencv-python = "^4.10.0.84"
@@ -26,6 +26,7 @@ hydra-core = "^1.3.2"
 lightning = "^2.5.0.post0"
 scikit-learn = "^1.6.0"
 mlflow = "^2.19.0"
+ultralytics = "^8.3.71"
 
 
 
