--- a/src/conf/models/params/resnet/params1.yaml
+++ b/src/conf/models/params/resnet/params1.yaml
@@ -9,6 +9,12 @@ metrics:
   - precision
   - recall
 
+optimizers:
+  _target_: torch.optim.SGD
+  params:
+    lr: ${models.params.train.lr}
+    momentum: ${models.params.train.momentum}
+
 model: 
   _target_: torchvision.models.resnet18
   pretrained: True
