--- a/src/conf/models/params/resnet/params2.yaml
+++ b/src/conf/models/params/resnet/params2.yaml
@@ -8,6 +8,11 @@ metrics:
   - f1
   - precision
   - recall
+optimizers:
+  _target_: torch.optim.SGD
+  params:
+    lr: ${models.params.train.lr}
+    momentum: ${models.params.train.momentum}
 
 model: 
   _target_: torchvision.models.resnet18
