--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,35 +10,30 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-torch = {version = "2.5.1+cu121", source = "torch"}
 ipykernel = "^6.29.5"
-numpy = "2.0"
-torchvision = {version = "0.20.1+cu121", source = "torch"}
+numpy = "1.26.4"
 matplotlib = "^3.9.3"
 opencv-python = "^4.10.0.84"
 helper = "^2.5.0"
 tqdm = "^4.67.1"
 pre-commit = "^4.0.1"
-
 pyqt6 = "^6.7.1"
-pillow = "^11.0.0"
+pillow = "^10.0.0"
 hydra-core = "^1.3.2"
 lightning = "^2.5.0.post0"
 scikit-learn = "^1.6.0"
 mlflow = "^2.19.0"
 ultralytics = "^8.3.71"
+label-studio-ml = {git = "https://github.com/HumanSignal/label-studio-ml-backend"}
+torch = "^2.6.0"
+torchvision = "^0.21.0"
+label-studio = "^1.16.0"
 
 
 
 [[tool.poetry.source]]
 name = "PyPI"
 priority = "primary"
-
-
-[[tool.poetry.source]]
-name = "torch"
-url = "https://download.pytorch.org/whl/cu121"
-priority = "supplemental"
 
 [build-system]
 requires = ["poetry-core"]
